--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 		</div>
 		<div id="copyright">
-			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
+			Inspired by <a href="">FlowerPower</a> project.<br />
 		</div>
 	</div>
 	<script type="text/javascript">
