--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						<img src="微信图片_20220322153853.jpg" alt="" srcset="" style="width: 120px; height: 120px;">
+						<img src="your.png" alt="" srcset="" style="width: 120px; height: 120px;">
 					</div>
 					<div id="loveu">
 						you are so beautiful .<br />
